# ml-from-scratch-cpp

./: .gitignore  CMakeLists.txt  build.sh  ml_from_scratch  readme.md  requirements.txt  run.sh
src/: Matrix.cpp  Matrix.h  Structures.cpp  Structures.h  main.cpp
src/benchmark/: LinearRegression.py  LogisticRegression.py  QuadraticDiscriminantAnalysis.py
src/models/: LinearRegression.cpp  LinearRegression.h  LogisticRegression.cpp  LogisticRegression.h  Model.h  QuadraticDiscriminantAnalysis.cpp  QuadraticDiscriminantAnalysis.h
